--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -222,3 +222,18 @@
 	note = "[Internet; descargado 17-Julio-2020]"
 }
 
+@misc{ apiArCoreDepth,
+	author = "google",
+	title = "Blending Realities with the ARCore Depth API",
+	year = "2019",
+	url = "https://developers.googleblog.com/2019/12/blending-realities-with-arcore-depth-api.html",
+	note = "[Internet; descargado 17-Julio-2020]"
+}
+
+@misc{ 3D-Viewer-v2,
+	author = "jmg0137",
+	title = "3D-Viewer-v2",
+	year = "2018",
+	url = "https://github.com/jmg0137/3D-Viewer-v2.0",
+	note = "[Internet; descargado 17-Julio-2020]"
+}
