--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -192,7 +192,7 @@ En la tabla \ref{tabla:comparacionHerramientas} se puede observar una comparativ
 
 \label{tablaComparacion}\tablaSmall{Comparativa herramientas AR}{l c c c c r c}{comparacionHerramientas}
 { \multicolumn{1}{l}{} & MT & SM & Plataforma  & Licencia & Precio & Requisitos\\}{ 
-	ArCore & X&X&Android& L & 0\euro & Altos\\ 
+	ArCore & X&X&iOS/Android& L & 0\euro & Altos\\ 
 	ArKit &X&X&iOS &L & 0\euro &-\\
 	CoSpaces&X & &iOS/Android  &L y C & 75\euro/año&Medios\\
 	Metaverse &X&X&iOS/Android &L y C & ?\euro&Medios \\
