--- a/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -2,18 +2,38 @@
 
 
 \section{Conclusiones}
+A pocos dias de la entrega, creo poder decir que si se han cumplido los objetivos plantados al comienzo del proyecto. Se ha realizado un estudio de las diferentes herramientas de realidad aumentada actuales, y se ha conseguido realizar una aplicación que pone aprueba las funcionalidades de una de estas herramientas, pensando en un ámbito educativo.
+
+Aunque hay decir que ha sido algo complicado, pues muchas de las herramientas  que en un principio encontraba hoy en día ya no existían.
+
+Por otra parte el desarrollo de la aplicación ha resultado algo complicado, pues no tenía la experiencia de desarrollo en Unity suficiente, y aunque al principio no lo apreciaba, en cuento la aplicación ha ido creciendo y el número de recursos aumentaba, esa falta de experiencia se ha notado.
+.
+
+.
+
+.
+
+ 
+
+
+
+Para concluir, 
+
 -Se han cumplido los objetivos.
 -Gracias a Unity, ha sido posible crear una aplicación funcional sin mucha dificultad.
 Aunque por otro lado, aunque si contaba con experiencia con Unity, no era mucha, por lo que algunos aspectos que realmente uno podria no llevar mucho tiempo, al final consumen mas tiempo del esperado.
--También respecto a Unity, debido a una falsta de experiencia ..... , a la hora de programar hay cosas que no se muy bien como ordenarlas
+-También respecto a Unity, debido a una falta de experiencia ..... , a la hora de programar hay cosas que no se muy bien como ordenarlas
 
 \section{Lineas de trabajo futuras}
-Durante el desarrollo, he observado puntos que podrían haber completado el desarrollo del proyecto.
+Tras concluir el desarrollo, puedo pensar en algunas tareas para posibles trabajos futuros.
+\begin{itemize}
+	\item En primer lugar, teniendo en cuenta uno de los aspectos que mas relevantes de la realidad aumentada hoy en día es la tendencia ha dejar de lado los marcadores físicos y centrarse en el reconocimiento sin marcadores, el reconocimiento del entorno que nos rodea.
+	Por ello una de los aspectos en los que se podría mejorar la aplicación es implementado este tipo de realidad aumentada, de una forma mas precisa y con mayor papel en el uso de la app.
+	
+	Si bien es cierto, que la principal limitación de esta realidad aumenta se encuentra en los dispositivos compatibles con ella, pero bastante posible que en unos años esta limitación pueda ser superada sin problemas.
+	\item Llevar la aplicación a otras plataformas como iOS o Windows. Por ejemplo sería posible llevar la aplicación a Windows,usando Webcam.
+	\item Uso de la realidad aumentada Web. Especialmente con las mejoras en las lineas de telecomunicaciones con la conexión 5G, permitirá realizar grandes avances en la realidad aumentada.
+	\item Uso de otra de las herramientas de realidad aumentada.
+	
+\end{itemize}
 
-Uno de los aspectos que mas relevantes de la realidad aumentada hoy en día es la tendencia ha dejar de lado los marcadores físicos y centrarse en el reconocimiento sin marcadores.
-Por ello una de los aspectos en los que se podría mejorar la aplicación es implementado este tipo de realidad aumentada, de una forma mas precisa y con mayor papel en el uso de la app.
-
-Otra de las lineas futuras, sería llevar la aplicación a otras plataformas. Por ejemplo sería posible llevar una aplicación windows, que pueda funcionar con una webcam.
-
-Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
-Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
