--- a/Documentación/tex/1_Introduccion.tex
+++ b/Documentación/tex/1_Introduccion.tex
@@ -7,7 +7,7 @@ Durante la última década ha crecido mucho, hasta el punto en el que actualment
 
 Este gran crecimiento es posible gracias al avance en las tecnologías móviles principalmente y su accesibilidad a un gran número de personas: los dispositivos móviles tienen la posibilidad de ejecutar tecnologías de realidad aumentada y virtual de forma sencilla y están al alcance de muchas personas.
 
-\imagen{Introducción}{Imágenes de diferentes ejemplos de realidad aumentada~\cite{fotoAR1},~\cite{fotoAR2},~\cite{fotoAR3},~\cite{fotoAR4}.}
+\imagen{Memoria/Introducción}{Imágenes de diferentes ejemplos de realidad aumentada~\cite{fotoAR1},~\cite{fotoAR2},~\cite{fotoAR3},~\cite{fotoAR4}.}
 
 
 
