--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -16,14 +16,14 @@ Existen diferentes técnicas por las que lograr realidad aumentada, principalmen
 
 \subsection{Detección de marcadores}
 
-La detección de marcadores se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial, para situar elementos que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras.
+La detección de marcadores se trata de un técnica de realidad aumentada en el que los sistemas utilizan como referencia espacial, para situar elementos que queremos superponer, una figura o imagen concreta, que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras (ver~\ref{fig:Memoria/ejemploMarcadorCasa}).
 
-\label{marcadorSencillo}\imagen{ejemploMarcadorCasa}{Ejemplo un marcador sencillo~\cite{AR_company}.}
+\imagen{Memoria/ejemploMarcadorCasa}{Ejemplo un marcador sencillo~\cite{AR_company}.}
 
 Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
 También es posible que el marcador se trate de un objeto físico, como por ejemplo una lámpara, o un coche.
 
-\imagen{ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador~\cite{AR_company}.}
+\imagen{Memoria/ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador~\cite{AR_company}.}
 
 Aunque gracias al avance de la calidad de las cámaras y del software de reconocimiento, es posible utilizar marcadores mas complejos, esto también implicarán que será mas probable que falle, y por consecuencia se desencuandren las imágenes insertadas por AR, que los tiempos de detección sean mas largos etc.
 
@@ -32,9 +32,9 @@ Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
 
 
 \begin{itemize}
-	\item \textbf{Marcadores}: El marcador mas básico es uno con un borde ancho. Su ventaja es que minimizan los costes de procesamiento y las posibilidades de error al reconocerlo. En la imagen \ref{fig:market} podemos ver un ejemplo de un marcador simple.\\		
+	\item \textbf{Marcadores}: El marcador mas básico es uno con un borde ancho. Su ventaja es que minimizan los costes de procesamiento y las posibilidades de error al reconocerlo. En la imagen \ref{fig:Memoria/market} podemos ver un ejemplo de un marcador simple.\\		
 	\item \textbf{Marcadores Codificados}:
-	Se trata de marcadores que poseen códigos de barra 2D, dentro del área de bordes patrones. En la imagen \ref{fig:market2} tenemos un ejemplo de distintos marcadores, que contienen diferentes patrones.
+	Se trata de marcadores que poseen códigos de barra 2D, dentro del área de bordes patrones. En la imagen \ref{fig:Memoria/market2} tenemos un ejemplo de distintos marcadores, que contienen diferentes patrones.
 	\item \textbf{Imágenes}:		
 	El poder usar imágenes evita tener que crear marcadores personalizados. El reconocimiento de imágenes entra en la categoría de seguimiento de características naturales. Su calidad como marcador, dependerá de si tiene un borde que defina claramente esa imagen, del contraste de sus colores o la complejidad de su composición.
 	\item \textbf{Múltiples Marcadores}:
@@ -44,15 +44,15 @@ Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
 	\item \textbf{Formas Simples}:
 	Algunas aplicaciones tienen la capacidad de distinguir diferentes formas simples, como son cubos, cilindros. También pueden distinguir las medidas de las formas, pudiendo así diferenciar si un cubo es mas grande que otro.
 	\item \textbf{Reconocimiento de objetos}:		
-	Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identifica la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo cuenta con una funcionalidad llamada Vuforia Object Scanner, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{fig:vuforia_recoObjeto} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
+	Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identifica la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo cuenta con una funcionalidad llamada Vuforia Object Scanner, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{fig:Memoria/vuforia_recoObjeto} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
 	
 \end{itemize}
 
-\imagenPeque{market}{Ejemplo de un marcador~\cite{linowes_babilinski_2017}.}
+\imagenPeque{Memoria/market}{Ejemplo de un marcador~\cite{linowes_babilinski_2017}.}
 
-\imagenflotante{market2}{Ejemplo de marcadores codificados~\cite{linowes_babilinski_2017}.}
+\imagenflotante{Memoria/market2}{Ejemplo de marcadores codificados~\cite{linowes_babilinski_2017}.}
 
-\imagen{vuforia_recoObjeto}{Vuforia Object Scanner~\cite{vuforia_scanner}.}	
+\imagen{Memoria/vuforia_recoObjeto}{Vuforia Object Scanner~\cite{vuforia_scanner}.}	
 
 
 
@@ -63,7 +63,7 @@ Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
 
 El Mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge, el cual tiene grabado unos dibujos por sus 6 caras, los dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
 
-\imagen{mergecube}{Mergecube~\cite{barker_2019}.} 
+\imagen{Memoria/mergecube}{Mergecube~\cite{barker_2019}.} 
 
 \subsection{Detección del entorno}
 
@@ -76,6 +76,7 @@ Simultaneous Localization and Mapping, se trata de una técnica para estimar los
 La mayoría de herramientas de realidad aumentada, que tienen la capacidad de detectar el entorno sin necesidad de marcadores, se basan en esta técnica~\cite{taketomi2017visual}.
 
 Los algoritmos de vSLAM, no solo son usados unicamente para la AR, también pueden ser aplicados para robótica, o los coches autónomos no tripulados.
+
 \section{Geolocalización}
 La geolocalización, es una técnica por la cual los dispositivos mediante los sensores de GPS y del giroscopio determinan su posición y orientación. De esta forma al conocer la posición y orientación del usuario, es capaz de determinar en que la posición del elemento en realidad aumentada respecto al usuario.
 Por ejemplo es posible crear un mapa, en el que en la imagen de una calle nos indique la localización de los negocios y lugares de interés teniendo sus coordenadas.
@@ -87,13 +88,13 @@ Es por ello que esta técnica hoy en día es mas frecuente que se use en combina
 \section{Orígenes y evolución de la realidad aumentada}
 El concepto de realidad aumentada fue utilizado por primera vez en 1901 por Frank L Baum en su novela The Master Key~\cite{theMasterKey}, en ella presenta una historia que a un niño le otorgan un regalo, que son como unas gafas que da a entender un concepto de realidad aumentada.
 
-Décadas mas tarde Morton Helling, conocido como el padre de la realidad virtual, inventó el Sensorama~\ref{fig:Sensorama} en 1957 y lo patentó en 1962, se trataba de una maquina que intentaba una mayor inmersión con la combinación de una pantalla, ventiladores, olores, una silla que se movía y sonido estéreo. Morton también diseñó TELESPHERE MASK, un aparato que recuerda mucho a las gafas de realidad virtual que conocemos hoy en día.
+Décadas mas tarde Morton Helling, conocido como el padre de la realidad virtual, inventó el Sensorama~(\ref{fig:Memoria/Sensorama}) en 1957 y lo patentó en 1962, se trataba de una maquina que intentaba una mayor inmersión con la combinación de una pantalla, ventiladores, olores, una silla que se movía y sonido estéreo. Morton también diseñó TELESPHERE MASK, un aparato que recuerda mucho a las gafas de realidad virtual que conocemos hoy en día.
 
-\imagen{Sensorama}{ Sensorama~\cite{ARhistory}}
+\imagen{Memoria/Sensorama}{ Sensorama~\cite{ARhistory}}
 
-En 1968 el profesor Ivan Sutherland junto a su estudiante Bob Sproull, Quintin Foster and Danny Cohen desarrollaron el considerado el primer sistema de realidad aumentada, llamado La Espada De Damocles~\ref{fig:EspadaDeDamocles}. Se conectaba a un ordenador para generar los gráficos. En el vídeo del siguiente enlace se puede ver una demostración: \url{https://www.youtube.com/watch?v=Xd1DgzPPH_Q}.
+En 1968 el profesor Ivan Sutherland junto a su estudiante Bob Sproull, Quintin Foster and Danny Cohen desarrollaron el considerado el primer sistema de realidad aumentada, llamado La Espada De Damocles~\ref{fig:Memoria/EspadaDeDamocles}. Se conectaba a un ordenador para generar los gráficos. En el vídeo del siguiente enlace se puede ver una demostración: \url{https://www.youtube.com/watch?v=Xd1DgzPPH_Q}.
 
-\imagen{EspadaDeDamocles}{La espada de Damocles~\cite{EspadaDamocles}}
+\imagen{Memoria/EspadaDeDamocles}{La espada de Damocles~\cite{EspadaDamocles}}
 
 En 1975 Myron Krueger creó VideoPlace, un sistema con el que lograba que el usuario pudiera interaccionar con la pantalla y moviendo objetos en en tiempo real~\cite{ARevolution}.
 
@@ -112,9 +113,9 @@ En 1999 la NASA emplea la realidad aumentada para mejorar la navegación en sus 
 
 
 
-En el 2000, se crea ARQuake por Bruce H. Thomas, el primer juego de realidad aumentada al aire libre. Se trata de un juego basado en el clásico Quake incorporando realidad aumentada. En la imagen \ref{fig:ArQuake} se observa una imágenes de como se podría representar el juego, y el dispositivo que era necesario para ejecutarlo y detectar el entorno.
+En el 2000, se crea ARQuake por Bruce H. Thomas, el primer juego de realidad aumentada al aire libre. Se trata de un juego basado en el clásico Quake incorporando realidad aumentada. En la imagen \ref{fig:Memoria/ArQuake} se observa una imágenes de como se podría representar el juego, y el dispositivo que era necesario para ejecutarlo y detectar el entorno.
 
-\imagen{ArQuake}{ Imágenes del juego ArQuake, y el dispositivo en el que se ejecutaba~\cite{ArQuake}}
+\imagen{Memoria/ArQuake}{ Imágenes del juego ArQuake, y el dispositivo en el que se ejecutaba~\cite{ArQuake}}
 
 En 2008 se funda WikiTude, con el objetivo de meterse en la aplicaciones de realidad aumentada móvil. 
 En 2009 ARToolKit se incorpora en Adobe Flash, consiguiendo así que la realidad aumentada pueda ejecutarse desde un navegador Web.
