Planificación temporal Sprint 28

--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -410,7 +410,7 @@
 
 
 % Datos de portada
-\title{Herramientas de realidad aumentada orientadas a docencia\\Documentación Técnica}
+\title{Estudio de herramientas de realidad aumentada y caso práctico\\Documentación Técnica}
 \author{Saúl Martín Ibáñez}
 \tutor{Álvar Arnaiz González}
 \cotutor{Pedro Luis Sánchez Ortega}
