--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -149,6 +149,11 @@ En la aplicación teníamos previsto añadir una ayuda o guía para el usuario, 
  
 Por parte de la aplicación queda resolver pequeños bug. Durante la reunión mientras mostraba las últimas mejoras descubrí uno, el cual se trata de que el número máximo de targets simultáneos para el modo de MultiTarget, en ocasiones se establecía en uno por error.
 
+ \subsection{Sprint 28 (15/07/2020 - 17/07/2020)}
+  Para este sprint el objetivo es centrarnos en cerrar la documentación. Para que los últimos días puedan ser dedicados a posibles correcciones.
+  
+  En la aplicación hay que añadir el icono que se usará para la app una vez instalada.
+  
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
@@ -273,5 +278,5 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	Commercial Use\\
 	}
 
-Para este proyecto, se ha decidido usar una licencia Apache 2.0 pues es una de las que tiene realizacion con las licencias de 
-https://support.ptc.com/help/flexplm/r11.1_m010/en/index.html#page/FlexPLM_Help_Center/common/copyright/SW_AboutBox.html
+Para este proyecto, se ha decidido usar una licencia Apache 2.0 pues es una de las que tiene realización con las licencias de....
+\url{https://support.ptc.com/help/flexplm/r11.1_m010/en/index.html#page/FlexPLM_Help_Center/common/copyright/SW_AboutBox.html}
