--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -60,7 +60,7 @@ En este modo, una vez que la cámara ya está activa, al enfocar el Mergecube, s
 
 En el caso de tener seleccionado el \textbf{modo de capturar target}~(ver figura~\ref{fig:Anexos/appOpciones}), la interfaz contará con dos elementos adicionales: 
 \begin{itemize}
-	\item El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad óptima para que el objetivo enfocado sea un target. En la imagen~\ref{Anexos/appCapturaTarget} se puede observar como al apuntar a una fondo blanco indica que tiene mala calidad, y al apuntar un fondo con una composición de elementos y colores buena la indica que es optimo para ser un target.
+	\item El primero se trata de una barra de colores (rojo, amarillo, verde) que indica la calidad óptima para que el objetivo enfocado sea un target. En la imagen~\ref{fig:Anexos/appCapturaTarget} se puede observar como al apuntar a una fondo blanco indica que tiene mala calidad, y al apuntar un fondo con una composición de elementos y colores buena la indica que es optimo para ser un target.
 	\item El segundo elemento será el disparador situado en la parte inferior central. Una vez que tengamos un objetivo que cumpla los requisitos de calidad, podremos presionar el disparador, de manera que el target se guardará temporalmente (al cerrar la aplicación o volver al menú los target se reinician). 
 \end{itemize}
 
